--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             <div class="slick-item">
                 <div class="reviews__item">
                     <div class="reviews__photo">
-                        <img class="reviews__img" src="img/ILYA.jpg" width="100%" alt="">
+                        <img class="reviews__img my" src="img/ILYA.jpg" alt="">
 
                     </div>
                     <div class="reviews__content">
